--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,13 +1,38 @@
-dateModified: 1665910441
+dateModified: 1665914312
 email:
   fromEmail: ekabue0@gmail.com
   fromName: 'http://site.test'
   transportType: craft\mail\transportadapters\Sendmail
+fs:
+  allimages:
+    hasUrls: true
+    name: allImages
+    settings:
+      path: $ASSET_BASE_PATH
+    type: craft\fs\Local
+    url: $ASSET_BASE_URL
 meta:
   __names__:
-    3ce55da4-e133-40f4-9411-b4975f715a25: 'http://site.test'
-    95fb19d8-e7fb-43bb-8322-0eda144557a3: 'http://site.test'
-    7363904e-a5d1-4ef0-b5cf-ad598c922a68: Common
+    3b126943-61c7-49ff-be5f-5446e2f47d7d: 'Service Item' # Service Item
+    3ce55da4-e133-40f4-9411-b4975f715a25: 'http://site.test' # http://site.test
+    6dd1fbd2-7a00-4dd0-869f-c678899cf8ee: Home # Home
+    6e48ed08-436c-4b76-9aee-0e482ae5922b: 'About Text' # About Text
+    53f52c04-39c7-4620-98e1-1bd1caccecce: 'Services Title' # Services Title
+    68cb522e-e3b5-418c-b319-1920fe9caa89: Images # Images
+    95fb19d8-e7fb-43bb-8322-0eda144557a3: 'http://site.test' # http://site.test
+    7363904e-a5d1-4ef0-b5cf-ad598c922a68: Common # Common
+    52139314-0d5f-4f6a-a942-c10055e7117f: 'Hero Subtitle' # Hero Subtitle
+    a0056a32-c1d0-42e3-9b6c-f0ead87fd0df: 'Client Logos' # Client Logos
+    c6691c90-6fca-4044-bd0b-ba86b28b5e01: 'Service Detail' # Service Detail
+    d48a7531-7b4b-4faa-8137-b3a280b72e5b: 'Hero Title' # Hero Title
+    e2044ab7-a88b-4511-8f76-7e96dcfa5f73: Home # Home
+    f65968aa-ac82-434c-b644-36d3c4d78123: 'Service Image' # Service Image
+    ff55a44d-aa6b-4e33-baf3-f95fa52a45c0: Home # Home
+plugins:
+  redactor:
+    edition: standard
+    enabled: true
+    schemaVersion: 2.3.0
 system:
   edition: solo
   live: true
