--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1665916460
+dateModified: 1665918527
 email:
   fromEmail: ekabue0@gmail.com
   fromName: 'http://site.test'
@@ -13,11 +13,14 @@ fs:
     url: $ASSET_BASE_URL
 meta:
   __names__:
+    1ca6bb03-6ebf-4068-921a-99f6dc44f1b5: Favicon # Favicon
+    2f193977-364b-4a61-939f-7ee677402ccd: Header # Favicon
     3ce55da4-e133-40f4-9411-b4975f715a25: 'http://site.test' # http://site.test
     5b812342-1f91-4d87-ac71-6f9e41447b2c: Service # Service
     6dd1fbd2-7a00-4dd0-869f-c678899cf8ee: Home # Home
     6e48ed08-436c-4b76-9aee-0e482ae5922b: 'About Text' # About Text
-    36c348e3-80db-4e47-9d9f-b2f10f86b5b5: 'Service Description'
+    8b9e95dd-744b-4cd8-9610-92c630a351b4: Logo # Logo
+    36c348e3-80db-4e47-9d9f-b2f10f86b5b5: 'Service Description' # Service Description
     41e52a82-2f38-4879-950f-eb3b579cb861: 'Service Title' # Service Title
     53f52c04-39c7-4620-98e1-1bd1caccecce: Services # Services
     68cb522e-e3b5-418c-b319-1920fe9caa89: Images # Images
@@ -25,8 +28,8 @@ meta:
     7363904e-a5d1-4ef0-b5cf-ad598c922a68: Common # Common
     52139314-0d5f-4f6a-a942-c10055e7117f: 'Hero Subtitle' # Hero Subtitle
     a0056a32-c1d0-42e3-9b6c-f0ead87fd0df: 'Client Logos' # Client Logos
-    af80ae11-8e76-4870-b5f7-d5628a9a50b8: 'Service  Image'
-    b016d7bd-22f7-4824-8938-936009def2d5: 'Service Url'
+    af80ae11-8e76-4870-b5f7-d5628a9a50b8: 'Service  Image' # Service  Image
+    b016d7bd-22f7-4824-8938-936009def2d5: 'Service Url' # Service Url
     d48a7531-7b4b-4faa-8137-b3a280b72e5b: 'Hero Title' # Hero Title
     e2044ab7-a88b-4511-8f76-7e96dcfa5f73: Home # Home
     ff55a44d-aa6b-4e33-baf3-f95fa52a45c0: Home # Home
