--- a/.env.example.dev
+++ b/.env.example.dev
@@ -1,23 +1,27 @@
 # The application ID used to to uniquely store session and cache data, mutex locks, and more
-CRAFT_APP_ID=
+CRAFT_APP_ID=CraftCMS--3cbe160b-091f-4c6c-9c21-e4cd7f219cf3
 
 # The environment Craft is currently running in (dev, staging, production, etc.)
 CRAFT_ENVIRONMENT=dev
 
 # The secure key Craft will use for hashing and encrypting data
-CRAFT_SECURITY_KEY=
+CRAFT_SECURITY_KEY=4O8y07-rqHMxxVMfaoHUL6JGE26W6ybm
 
 # Database connection settings
 CRAFT_DB_DRIVER=mysql
 CRAFT_DB_SERVER=127.0.0.1
 CRAFT_DB_PORT=3306
-CRAFT_DB_DATABASE=
+CRAFT_DB_DATABASE=site
 CRAFT_DB_USER=root
 CRAFT_DB_PASSWORD=
-CRAFT_DB_SCHEMA=public
-CRAFT_DB_TABLE_PREFIX=
+CRAFT_DB_SCHEMA=
+CRAFT_DB_TABLE_PREFIX=st_
 
 # General settings (see config/general.php)
 DEV_MODE=true
 ALLOW_ADMIN_CHANGES=true
 DISALLOW_ROBOTS=true
+
+PRIMARY_SITE_URL=http://site.test/
+ASSET_BASE_URL=http://site.test/uploads
+ASSET_BASE_PATH=C:\laragon\www\site\web\uploads
