--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1665992389
+dateModified: 1665997358
 email:
   fromEmail: ekabue0@gmail.com
   fromName: 'http://site.test'
@@ -13,16 +13,19 @@ fs:
     url: $ASSET_BASE_URL
 meta:
   __names__:
+    0c1f3290-52fa-4343-ac91-be725216b4f4: 'project Image' # project Image
     0f4e6006-f9ac-48d4-8d53-38c4129b2112: 'AboutUs Text' # AboutUs Text
     1ca6bb03-6ebf-4068-921a-99f6dc44f1b5: Favicon # Favicon
     2f193977-364b-4a61-939f-7ee677402ccd: Header # Header
     3ce55da4-e133-40f4-9411-b4975f715a25: 'http://site.test' # http://site.test
     5b812342-1f91-4d87-ac71-6f9e41447b2c: Service # Service
     5e23d56a-b270-4cbc-bbe3-294b6b6be4ae: 'vision Text' # vision Text
+    6d2b17c2-da19-4596-a43e-b75e912fdeeb: 'project Name' # project Name
     6dd1fbd2-7a00-4dd0-869f-c678899cf8ee: Home # Home
     6e48ed08-436c-4b76-9aee-0e482ae5922b: 'About Text' # About Text
     7f1d2261-d055-46c9-8819-49550e0061b2: Values # Values
     8b9e95dd-744b-4cd8-9610-92c630a351b4: Logo # Logo
+    8fc257c4-8af7-403b-9aab-836c4c06ea57: project # project
     36c348e3-80db-4e47-9d9f-b2f10f86b5b5: 'Service Description' # Service Description
     41e52a82-2f38-4879-950f-eb3b579cb861: 'Service Title' # Service Title
     49c08815-608a-4b26-a9ab-dda7724f7b62: 'AboutUs ' # AboutUs 
@@ -39,7 +42,9 @@ meta:
     afacf5e3-057c-4600-a769-6cfcf2bd9bae: values # values
     b016d7bd-22f7-4824-8938-936009def2d5: 'Service Url' # Service Url
     ba810493-101f-4642-9440-9881c8055c29: 'About us' # About us
+    be2d5368-df91-41b2-8377-aa5bb66594f1: Default # Default
     c9cd0c14-9d24-489c-9509-8a65e38773ea: 'value Text' # value Text
+    c98002e6-2975-4bbb-9025-9ae3e4f77f83: projects # projects
     d48a7531-7b4b-4faa-8137-b3a280b72e5b: 'Hero Title' # Hero Title
     e8dadebe-05e0-49d0-a997-6f2f05241d98: 'About us' # About us
     e2044ab7-a88b-4511-8f76-7e96dcfa5f73: Home # Home
