--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1666075498
+dateModified: 1666083749
 email:
   fromEmail: ekabue0@gmail.com
   fromName: 'http://site.test'
@@ -14,39 +14,50 @@ fs:
 meta:
   __names__:
     0c1f3290-52fa-4343-ac91-be725216b4f4: 'project Image' # project Image
+    0d4fd89c-b486-4e2f-970a-0e7046290c00: 'Footer Phonenumber' # Footer Phonenumber
     0f4e6006-f9ac-48d4-8d53-38c4129b2112: 'AboutUs Text' # AboutUs Text
     1ca6bb03-6ebf-4068-921a-99f6dc44f1b5: Favicon # Favicon
     2f193977-364b-4a61-939f-7ee677402ccd: Header # Header
     3ce55da4-e133-40f4-9411-b4975f715a25: 'http://site.test' # http://site.test
     5b812342-1f91-4d87-ac71-6f9e41447b2c: Service # Service
+    5bac62a4-ec9c-4639-9ae8-168b2b0ca90c: 'Intro Video' # Intro Video
+    5c09f83a-d109-4c22-bff4-99e650d8cab5: 'Preloader Subtitle' # Preloader Subtitle
     5e23d56a-b270-4cbc-bbe3-294b6b6be4ae: 'vision Text' # vision Text
     6d2b17c2-da19-4596-a43e-b75e912fdeeb: 'project Name' # project Name
     6dd1fbd2-7a00-4dd0-869f-c678899cf8ee: Home # Home
     6e48ed08-436c-4b76-9aee-0e482ae5922b: 'About Text' # About Text
+    7bfba1e2-c815-4268-847b-1b9993cbcb5c: Facebook # Facebook
     7f1d2261-d055-46c9-8819-49550e0061b2: Values # Values
     8b9e95dd-744b-4cd8-9610-92c630a351b4: Logo # Logo
     8fc257c4-8af7-403b-9aab-836c4c06ea57: project # project
+    13f008a9-c2c9-44b3-ab1a-d000388820d0: 'preloader Title' # preloader Title
     36c348e3-80db-4e47-9d9f-b2f10f86b5b5: 'Service Description' # Service Description
     41e52a82-2f38-4879-950f-eb3b579cb861: 'Service Title' # Service Title
     49c08815-608a-4b26-a9ab-dda7724f7b62: 'AboutUs ' # AboutUs 
     53f52c04-39c7-4620-98e1-1bd1caccecce: Services # Services
     55fe5512-a3a3-4e74-bec2-1e266007fe59: 'about Hero' # about Hero
     68cb522e-e3b5-418c-b319-1920fe9caa89: Images # Images
+    90a30bc4-5358-42ca-9d9f-a52dea0064b4: Preloader # Preloader
     95fb19d8-e7fb-43bb-8322-0eda144557a3: 'http://site.test' # http://site.test
     352b53a7-2b29-4e88-b288-bcc5b7aa0a69: 'value Title' # value Title
+    413b23e4-c169-4637-84ce-45d18f6bcff6: 'Footer Location' # Footer Location
     536485e0-cc4f-4ae6-b249-d2f5add291a7: coverImage # coverImage
     7363904e-a5d1-4ef0-b5cf-ad598c922a68: Common # Common
     52139314-0d5f-4f6a-a942-c10055e7117f: 'Hero Subtitle' # Hero Subtitle
     a0056a32-c1d0-42e3-9b6c-f0ead87fd0df: 'Client Logos' # Client Logos
     a1afe4ff-8bbf-4a85-9c3e-b8df5f31eda2: 'mission Text' # mission Text
+    a7df6c94-6ad0-482b-951a-a4a8080498a4: 'Footer Email' # Footer Email
     af80ae11-8e76-4870-b5f7-d5628a9a50b8: 'Service  Image' # Service  Image
     afacf5e3-057c-4600-a769-6cfcf2bd9bae: values # values
     b016d7bd-22f7-4824-8938-936009def2d5: 'Service Url' # Service Url
+    b074a87c-975a-44df-9198-c1d9f71100d9: instagram # instagram
     ba810493-101f-4642-9440-9881c8055c29: 'About us' # About us
     be2d5368-df91-41b2-8377-aa5bb66594f1: Default # Default
     c9cd0c14-9d24-489c-9509-8a65e38773ea: 'value Text' # value Text
     c98002e6-2975-4bbb-9025-9ae3e4f77f83: projects # projects
+    cf159c23-b333-41b4-ba36-1334d3a2694b: Footer # Footer
     d48a7531-7b4b-4faa-8137-b3a280b72e5b: 'Hero Title' # Hero Title
+    d57ced88-cdf6-47fc-a434-53825a630fc5: Twitter # Twitter
     d79868ba-33f9-4aad-86be-92e32ca1eb94: 'Project Description' # Project Description
     e8dadebe-05e0-49d0-a997-6f2f05241d98: 'About us' # About us
     e2044ab7-a88b-4511-8f76-7e96dcfa5f73: Home # Home
